# boros

./: .env.template  .gitignore  AUDIT_AND_IMPLEMENTATION.md  BOROS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_AUDIT.md  LICENSE  PROPOSAL.md  adapt_engine.py  agent_loop.py  boros_analysis_report.md.resolved  config.json  core_memory.json  cycle_prompt.md  docker-compose.yml  eval-implementation.md  identity.json  kernel.py  lineage.json  manifest.json  pyproject.toml  readme.md  requirements.txt  run.py  start.py  suggestions.md  tool_schemas.py  world_model.json
.claude/: settings.local.json
adapters/: __init__.py  base_adapter.py
adapters/providers/: anthropic.py  gemini.py  ollama.py  openai.py  openai_compat.py
eval-generator/: __init__.py  config.json  difficulty-config.json  eval_generator.py  tool_dispatcher.py
evals/: categories.json
memory/_indexes/: causal.md  episodes.md
skills/civilization/: SKILL.md  skill.json
skills/context-orchestration/: SKILL.md  skill.json
skills/director-interface/: SKILL.md  changelog.md  skill.json
skills/eval-bridge/: SKILL.md  skill.json
skills/eval_util/: SKILL.md  changelog.md  skill.json
skills/loop-orchestrator/: SKILL.md  skill.json
skills/memory/: SKILL.md  skill.json
skills/meta-evaluation/: SKILL.md  skill.json
skills/meta-evolution/: SKILL.md  skill.json
skills/mode-controller/: SKILL.md  skill.json
skills/reasoning/: SKILL.md  skill.json
skills/reflection/: SKILL.md  skill.json
skills/skill-forge/: SKILL.md  (+1 more)
world_model.examples/: coding.json  reasoning.json  research.json
(+123 files in other folders)
