[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "boros"
version = "1.0.0"
description = "An autonomous, self-evolving AI substrate"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["ai", "autonomous", "self-evolving", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
boros = "boros.run:main"

[project.urls]
Homepage = "https://github.com/mumbrane-labs/boros"
Issues = "https://github.com/mumbrane-labs/boros/issues"

[tool.setuptools.packages.find]
where = [".."]
include = ["boros*"]
